fix: add zindex to prevent overlap

--- a/packages/raystack/v1/components/dialog/dialog.module.css
+++ b/packages/raystack/v1/components/dialog/dialog.module.css
@@ -3,6 +3,7 @@
   position: fixed;
   inset: 0;
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  z-index: 9998;
 }
 
 .dialogContent {
@@ -18,6 +19,7 @@
   max-height: 85vh;
   padding: var(--rs-space-5);
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  z-index: 9999;
 }
 
 .close {
